add_library(nfs
        nfs_init.cpp
        nfs_xdr.cpp
        nfs_utils.cpp
        nfs_null.cpp
        nfs_getattr.cpp
        nfs_setattr.cpp
        nfs_lookup.cpp
        nfs_access.cpp
        nfs_readlink.cpp
        nfs_read.cpp
        nfs_write.cpp
        nfs_create.cpp
        nfs_mkdir.cpp
        nfs_symlink.cpp
        nfs_mknod.cpp
        nfs_remove.cpp
        nfs_rmdir.cpp
        nfs_rename.cpp
        nfs_link.cpp
        nfs_readdir.cpp
        nfs_readdirplus.cpp
        nfs_fsstat.cpp
        nfs_fsinfo.cpp
        nfs_pathconf.cpp
        nfs_commit.cpp)
target_link_libraries(nfs utils)